dirty fix for X overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 
 body {
   width: 100%;
+  overflow-x: hidden;
 }
 
 #slide1,
